@@ -12,20 +12,22 @@
 // ============================================================================
 package org.talend.components.dataprep.connection;
 
+import java.io.*;
+import java.net.*;
+import java.util.List;
+
+import javax.servlet.http.HttpServletResponse;
+
 import org.apache.http.Header;
 import org.apache.http.HttpResponse;
 import org.apache.http.client.fluent.Request;
+import org.apache.http.client.methods.HttpGet;
+import org.apache.http.impl.client.DefaultHttpClient;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
+import org.talend.components.dataprep.runtime.DataPrepOutputModes;
 import org.talend.daikon.i18n.GlobalI18N;
 import org.talend.daikon.i18n.I18nMessages;
-
-import javax.servlet.http.HttpServletResponse;
-import java.io.IOException;
-import java.io.OutputStream;
-import java.net.HttpURLConnection;
-import java.net.URL;
-import java.util.List;
 
 public class DataPrepConnectionHandler {
 
@@ -33,9 +35,8 @@ public class DataPrepConnectionHandler {
 
     private static final I18nMessages messages = GlobalI18N.getI18nMessageProvider()
             .getI18nMessages(DataPrepConnectionHandler.class);
+
     public static final String API_DATASETS = "/api/datasets/";
-    public static final String CONTENT_TYPE = "Content-Type";
-    public static final String TEXT_PLAIN = "text/plain";
 
     private final String url;
 
@@ -45,15 +46,21 @@ public class DataPrepConnectionHandler {
 
     private final String dataSetName;
 
+    private final String dataSetId;
+
+    private DataPrepOutputModes mode;
+
     private HttpURLConnection urlConnection;
 
     private Header authorisationHeader;
 
-    public DataPrepConnectionHandler(String url, String login, String pass, String dataSetName) {
+    public DataPrepConnectionHandler(String url, String login, String pass, String dataSetId, String dataSetName) {
         this.url = url;
         this.login = login;
         this.pass = pass;
+        this.dataSetId = dataSetId;
         this.dataSetName = dataSetName;
+        LOGGER.debug("Url: {}", url);
     }
 
     public HttpResponse connect() throws IOException {
@@ -61,8 +68,9 @@ public class DataPrepConnectionHandler {
         HttpResponse response = request.execute().returnResponse();
         authorisationHeader = response.getFirstHeader("Authorization");
         if (returnStatusCode(response) != HttpServletResponse.SC_OK && authorisationHeader == null) {
-            LOGGER.error(messages.getMessage("error.loginFailed", response.getStatusLine()));
-            throw new IOException(messages.getMessage("error.loginFailed", response.getStatusLine()));
+            String moreInformation = extractResponseInformationAndConsumeResponse(response);
+            LOGGER.error(messages.getMessage("error.loginFailed", moreInformation));
+            throw new IOException(messages.getMessage("error.loginFailed", moreInformation));
         }
         return response;
     }
@@ -71,18 +79,42 @@ public class DataPrepConnectionHandler {
         HttpResponse response;
         try {
             if (urlConnection != null) {
-                int responseCode = urlConnection.getResponseCode();
-                LOGGER.debug("Url connection response code: {}", responseCode);
-                urlConnection.disconnect();
+                closeUrlConnection();
             }
         } finally {
             Request request = Request.Post(url + "/logout?client-app=STUDIO").addHeader(authorisationHeader);
             response = request.execute().returnResponse();
             if (returnStatusCode(response) != HttpServletResponse.SC_OK && authorisationHeader != null) {
-                LOGGER.error(messages.getMessage("error.logoutFailed", response.getStatusLine()));
+                LOGGER.error(messages.getMessage("error.logoutFailed", extractResponseInformationAndConsumeResponse(response)));
             }
         }
         return response;
+    }
+
+    private void closeUrlConnection() throws IOException {
+        LOGGER.debug("urlConnection = " + urlConnection);
+        int responseCode = urlConnection.getResponseCode();
+        LOGGER.debug("Url connection response code: {}", responseCode);
+        if (mode != null && responseCode != HttpServletResponse.SC_OK) {
+            String errorMessage = extractResponseInformationAndConsumeResponse(urlConnection);
+
+            // TODO adjust the exception information
+            switch (mode) {
+            case Create:
+                urlConnection.disconnect();
+                throw new IOException("Dataset exist on Dataprep server. Response information: " + errorMessage);
+            case Update:
+                urlConnection.disconnect();
+                throw new IOException("Wrong DatasetID. Response information: " + errorMessage);
+            case LiveDataset:
+                urlConnection.disconnect();
+                throw new IOException("Wrong url. Response information: " + errorMessage);
+            default:
+                throw new UnsupportedOperationException();
+            }
+
+        }
+        urlConnection.disconnect();
     }
 
     private int returnStatusCode(HttpResponse response) {
@@ -100,52 +132,69 @@ public class DataPrepConnectionHandler {
     }
 
     public DataPrepStreamMapper readDataSetIterator() throws IOException {
-        Request request = Request.Get(url + API_DATASETS + dataSetName + "?metadata=false").addHeader(authorisationHeader);
-        HttpResponse response = request.execute().returnResponse();
+
+        // apache hc-fluent cannot be used here are it does not support streaming
+        final HttpGet httpGet = new HttpGet(url + API_DATASETS + dataSetId + "?fullContent=true");
+        LOGGER.debug("getting dataset content from {}", httpGet.getURI());
+        httpGet.addHeader(authorisationHeader);
+
+        DefaultHttpClient client = new DefaultHttpClient();
+        final HttpResponse response = client.execute(httpGet);
+        LOGGER.debug("response is {}", response.getStatusLine());
+
         if (returnStatusCode(response) != HttpServletResponse.SC_OK) {
-            LOGGER.error(messages.getMessage("error.retrieveDatasetFailed", returnStatusCode(response)));
-            throw new IOException(messages.getMessage("error.retrieveDatasetFailed", returnStatusCode(response)));
+            String moreInformation = extractResponseInformationAndConsumeResponse(response);
+            LOGGER.error(messages.getMessage("error.retrieveDatasetFailed", moreInformation));
+            throw new IOException(messages.getMessage("error.retrieveDatasetFailed", moreInformation));
         }
-        LOGGER.debug("Read DataSet Response: {} ", response);
+
         return new DataPrepStreamMapper(response.getEntity().getContent());
     }
 
-    public OutputStream createInLiveDataSetMode() throws IOException {
-
-        LOGGER.debug("DataSet name: " + dataSetName);
-
-        // in live dataset, the request is a simple post to the livedataset url
-        URL connectionUrl = new URL(url);
-        urlConnection = (HttpURLConnection) connectionUrl.openConnection();
-        urlConnection.setRequestMethod("POST");
-        urlConnection.setRequestProperty(CONTENT_TYPE, TEXT_PLAIN);
-        urlConnection.setDoOutput(true);
-        return urlConnection.getOutputStream();
+    public OutputStream write(DataPrepOutputModes mode) throws IOException {
+        this.mode = mode;
+        switch (mode) {
+        case Create:
+            return writeToServer("POST", requestEncoding());
+        case Update:
+            return writeToServer("PUT", url + API_DATASETS + dataSetId);
+        case LiveDataset:
+            return writeToServer("POST", url);
+        default:
+            throw new UnsupportedOperationException();
+        }
     }
 
-    public OutputStream update() throws IOException {
-        URL connectionUrl = new URL(url + API_DATASETS + dataSetName);
-        LOGGER.debug("Request is {}", connectionUrl);
-        urlConnection = (HttpURLConnection) connectionUrl.openConnection();
-        urlConnection.setRequestMethod("PUT");
-        urlConnection.setRequestProperty(authorisationHeader.getName(), authorisationHeader.getValue());
-        urlConnection.setRequestProperty(CONTENT_TYPE, TEXT_PLAIN);
-        urlConnection.setDoOutput(true);
-        return urlConnection.getOutputStream();
+    private String requestEncoding() throws IOException {
+        URI uri;
+        try {
+            URL localUrl = new URL(url);
+            uri = new URI(localUrl.getProtocol(), null, localUrl.getHost(), localUrl.getPort(), "/api/datasets",
+                    "name=" + dataSetName + "&tag=components", null);
+            LOGGER.debug("Request is: {}", uri);
+        } catch (MalformedURLException | URISyntaxException e) {
+            LOGGER.debug(messages.getMessage("error.wrongInputParameters", e));
+            throw new IOException(messages.getMessage("error.wrongInputParameters", e));
+        }
+        return uri.toString();
     }
 
-    public OutputStream create() throws IOException {
-        URL connectionUrl = new URL(url + "/api/datasets?name=" + dataSetName);
+    private OutputStream writeToServer(String requestMethod, String request) throws IOException {
+        URL connectionUrl = new URL(request);
         urlConnection = (HttpURLConnection) connectionUrl.openConnection();
-        urlConnection.setRequestMethod("POST");
-        urlConnection.setRequestProperty(authorisationHeader.getName(), authorisationHeader.getValue());
-        urlConnection.setRequestProperty(CONTENT_TYPE, TEXT_PLAIN);
+        urlConnection.setRequestMethod(requestMethod);
+        if (authorisationHeader != null) {
+            urlConnection.setRequestProperty(authorisationHeader.getName(), authorisationHeader.getValue());
+        }
+        urlConnection.setRequestProperty("Content-Type", "text/plain");
+        urlConnection.setRequestProperty("Accept", "application/json, text/plain");
         urlConnection.setDoOutput(true);
+        urlConnection.connect();
         return urlConnection.getOutputStream();
     }
 
     public List<Column> readSourceSchema() throws IOException {
-        Request request = Request.Get(url + API_DATASETS + dataSetName + "/metadata");
+        Request request = Request.Get(url + API_DATASETS + dataSetId + "/metadata");
         request.addHeader(authorisationHeader);
 
         DataPrepStreamMapper dataPrepStreamMapper = null;
@@ -154,8 +203,9 @@ public class DataPrepConnectionHandler {
         try {
             HttpResponse response = request.execute().returnResponse();
             if (returnStatusCode(response) != HttpServletResponse.SC_OK) {
-                LOGGER.error(messages.getMessage("error.retrieveSchemaFailed", returnStatusCode(response)));
-                throw new IOException(messages.getMessage("error.retrieveSchemaFailed", returnStatusCode(response)));
+                String moreInformation = extractResponseInformationAndConsumeResponse(response);
+                LOGGER.error(messages.getMessage("error.retrieveSchemaFailed", moreInformation));
+                throw new IOException(messages.getMessage("error.retrieveSchemaFailed", moreInformation));
             }
             dataPrepStreamMapper = new DataPrepStreamMapper(response.getEntity().getContent());
             metaData = dataPrepStreamMapper.getMetaData();
@@ -166,5 +216,50 @@ public class DataPrepConnectionHandler {
         }
 
         return metaData.getColumns();
+    }
+
+    private String extractResponseInformationAndConsumeResponse(HttpResponse response) throws IllegalStateException, IOException {
+        InputStream is = null;
+        try {
+            is = response.getEntity().getContent();
+            return extractResponseInformationAndConsumeResponse(is);
+        } finally {
+            if (is != null) {
+                is.close();
+            }
+        }
+    }
+
+    private String extractResponseInformationAndConsumeResponse(HttpURLConnection connection) throws IOException {
+        InputStream is = null;
+        try {
+            try {
+                is = connection.getInputStream();
+            } catch (IOException e) {
+                is = connection.getErrorStream();
+            }
+            return extractResponseInformationAndConsumeResponse(is);
+        } finally {
+            if (is != null) {
+                is.close();
+            }
+        }
+    }
+
+    private String extractResponseInformationAndConsumeResponse(InputStream is) throws IOException {
+        if (is == null) {
+            return null;
+        }
+        InputStreamReader reader = new InputStreamReader(is);
+        BufferedReader sr = new BufferedReader(reader);
+        StringBuilder sb = new StringBuilder();
+
+        String line = null;
+        while ((line = sr.readLine()) != null) {
+            sb.append(line);
+        }
+
+        // TODO in fact, it's a json string, we should extract it
+        return sb.toString();
     }
 }
